Set up HomePage

--- a/templates/views/secret.hbs
+++ b/templates/views/secret.hbs
@@ -37,7 +37,8 @@
 </head>
 <body>
     {{!-- {{>navbar}} --}}
-     {{>newnavbar}}
+     {{!-- {{>newnavbar}} --}}
+     {{>func}}
     {{!-- <h1>SEcret</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore repudiandae dolorem doloribus explicabo sunt voluptatum commodi quae blanditiis rerum, veniam magnam illum similique quo quas ipsum animi optio ipsam harum iure provident. Voluptatum omnis accusamus cum, asperiores quasi adipisci quaerat tempore architecto ad ut ipsum, aspernatur totam assumenda possimus facilis, ducimus sapiente! Cum, harum? Ipsam!</p> --}}
 {{!-- </body>
@@ -81,18 +82,18 @@
 
       <!-- Add more form fields as needed -->
 
-      <button type="submit" class="btn btn-primary">Update Profile</button>
+      <button type="submit" class="btn btn-success">Update Profile</button>
     </form>
    <br>
   
-     <a href="/logout" class="btn btn-danger">Logout</a>
-     <a href="/" class="btn btn-primary ">Go to HomePage</a>
-    <a href="/recipe" class="btn btn-success" target="_blank">Go to Recipe Page</a>
+     {{!-- <a href="/logout" class="btn btn-danger">Logout</a> --}}
+     <a href="/" class="btn btn-primary">Home Page</a>
+    <a href="/recipe" class="btn btn-warning" target="_blank">Explore Recipes</a>
   </div>
   </div>
 
 <div class="col-md-12 text-center dm">
-        <p>&copy; 2023 Special-Spoon. All Rights Reserved.</p>
+        <p>&copy; 2024 Special-Spoon. All Rights Reserved.</p>
 </div>
 </body>
 </html>
