--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,10 +19,11 @@ body {
   position: relative;
   width: 750px;
   height:500px;
-  background: transparent;
+  /* background: transparent; */
   border: 2px solid #0ef;
   overflow: hidden;
   box-shadow: 0 0 25px #0ef;
+  background-color: #081b29;
 }
 
 .wrapper .form-box {
