--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-  {{!-- {{>navbar}} --}}
- {{>newnavbar}}
+  
+ {{>func}}
     <!-- Login Form -->
     <div class="wrapper">
         <span class="bg-animate"></span>
