--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    {{!-- {{>navbar}} --}}
-     {{>newnavbar}}
+    
+     {{>func}}
     <!-- Login Form -->
     <div class="wrapper active">
         <span class="bg-animate"></span>
