--- a/templates/views/secret.hbs
+++ b/templates/views/secret.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Special-Spoon-DashBoard</title> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         h1 , p {
             color: white;
@@ -32,20 +33,34 @@
 .dm p{
   margin-bottom: 0rem;
 }
+
+.alert {
+        position: fixed;
+        top: 70px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 1000;
+        width: 80%;
+        max-width: 500px;
+        text-align: center;
+    }
     </style>
     
 </head>
 <body>
-    {{!-- {{>navbar}} --}}
-     {{!-- {{>newnavbar}} --}}
      {{>func}}
-    {{!-- <h1>SEcret</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore repudiandae dolorem doloribus explicabo sunt voluptatum commodi quae blanditiis rerum, veniam magnam illum similique quo quas ipsum animi optio ipsam harum iure provident. Voluptatum omnis accusamus cum, asperiores quasi adipisci quaerat tempore architecto ad ut ipsum, aspernatur totam assumenda possimus facilis, ducimus sapiente! Cum, harum? Ipsam!</p> --}}
-{{!-- </body>
-</html> --}}
 
+    {{#if successMessage}}
+        <div class="alert alert-success" role="alert">
+            {{successMessage}}
+        </div>
+    {{/if}}
 
-
+    {{#if errorMessage}}
+        <div class="alert alert-danger" role="alert">
+            {{errorMessage}}
+        </div>
+    {{/if}}
     
        <h1 class="set">Welcome,  {{defaultIfUndefined userData.Username "Buddy"}}!</h1>
 
@@ -95,5 +110,20 @@
 <div class="col-md-12 text-center dm">
         <p>&copy; 2024 Special-Spoon. All Rights Reserved.</p>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var alertElement = document.querySelector('.alert');
+        if (alertElement) {
+            setTimeout(function() {
+                alertElement.style.transition = 'opacity 1s';
+                alertElement.style.opacity = '0';
+                setTimeout(function() {
+                    alertElement.remove();
+                }, 1000);
+            }, 5000);
+        }
+    });
+</script>
 </body>
 </html>
